--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "@grimlink/eleventy-plugin-lucide-icons",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "This Eleventy plugin enables the inclusion of lucide-icons as inline SVG elements.",
   "main": "index.js",
-  "files": ["index.js"],
+  "files": [
+    "index.js"
+  ],
   "scripts": {
     "test": "npm --prefix _test_ run build"
   },
@@ -11,7 +13,13 @@
     "type": "git",
     "url": "git+https://github.com/GrimLink/eleventy-plugin-lucide-icons.git"
   },
-  "keywords": ["eleventy", "eleventy-plugin", "11ty", "11ty-plugin", "lucide"],
+  "keywords": [
+    "eleventy",
+    "eleventy-plugin",
+    "11ty",
+    "11ty-plugin",
+    "lucide"
+  ],
   "author": "GrimLink",
   "license": "MIT",
   "bugs": {
@@ -22,6 +30,6 @@
     "compatibility": ">=1.0.0"
   },
   "dependencies": {
-    "lucide-static": "^0.230.0"
+    "lucide-static": "^0.236.0"
   }
 }
