--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -32,6 +32,7 @@ jobs:
           git config user.name ${{ env.GIT_USER }}
           git config user.email ${{ env.GIT_EMAIL }}
           git checkout -b "${{ env.GIT_BRANCH }}-${timestamp}"
+          git fetch -a
           git add -A
           git commit -m "Update version with dependency update" || exit 0
           git push --set-upstream origin ${{ env.GIT_BRANCH }}-${timestamp}
